[package]
name = "beady"
version = "0.6.1"
edition = "2021"
description = "A macro for writing tests in a Behaviour Driven (BD) style."
license = "MIT OR Apache-2.0"
keywords = ["bdd", "given-when-then"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.40"
quote = "1.0.20"
syn = { version = "2.0.66", features = ["full", "extra-traits", "parsing"] }

[dev-dependencies]
tokio = { version = "1.19.2", features = ["macros", "rt", "time"] }
trybuild = "1.0.63"
